--- a/.github/workflows/Triggered_Workflow.yml
+++ b/.github/workflows/Triggered_Workflow.yml
@@ -13,4 +13,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Print Hello World
+        run: echo "Hello, World!"
+
       # Your existing steps go here
